Fixes based on PR review

--- a/modules/retail/pages/dedicated-with-formulas.adoc
+++ b/modules/retail/pages/dedicated-with-formulas.adoc
@@ -1,8 +1,11 @@
 [[dedicated-with-formulas]]
 = Set Up the {productname} {smr} Environment with dedicated network for terminal
 
-To set up the {productname} {smr} environment, you will need to have already installed and configured {productname} Server, have one or more {productname} {smr} branch server proxies installed and one of more OS images built.
+To set up the {productname} {smr} environment, you will need to have already installed and configured:
 
+* {productname} {smr} Server
+* one or more {productname} {smr} branch server proxies
+* one or more POS images built
 
 == Assumptions
 
@@ -22,8 +25,8 @@ This example covers two configuration methods with both of them achieving same r
 
 == Create required system groups
 
-Unlike when using provided tools, manually setting up formulas require manual creation of requires system groups.
-Following guide xref:reference:systems/system-groups.adoc[] create following system groups:
+Unlike when using provided tools, manually setting up formulas requires manual creation of needed system groups.
+Follow guide xref:reference:systems/system-groups.adoc[] to create the system groups:
 
 - [systemitem]``TERMINALS``
 - [systemitem]``HWType:TerminalOEM-T1000``
@@ -52,7 +55,7 @@ We assign following formulas to the branch server:
 . In displayed list select [systemitem]``Dhcpd``
 . In displayed list select [systemitem]``Tftpd``
 . In displayed list select [systemitem]``Bind``
-. Save assigned formulas by clicking on [guimenu]``Save`` button in top right corner
+. Save assigned formulas by clicking btn:[Save] in top right corner
 
 .Procedure: Configure Branch Network formula
 
@@ -107,7 +110,7 @@ We assign following formulas to the branch server:
 . In the [guimenu]``Configured Zones`` section, use these parameters for Zone 1, which is our primary zone:
 * Set the [guimenu]``Name`` to [systemitem]``branch1.mystore.com``
 * In the [guimenu]``Type`` field, select [systemitem]``master``
-. Click [btn]``Add item`` to add a second zone, and set these parameters for Zone 2, which is used for reverse name resolution:
+. Click btn:[Add item] to add a second zone, and set these parameters for Zone 2, which is used for reverse name resolution:
 * Set the [guimenu]``Name`` to [systemitem]``com.mystore.branch1``
 * In the [guimenu]``Type`` field, select [systemitem]``master``
 . In the [guimenu]``Available Zones`` section, use these parameters for Zone 1:
@@ -124,7 +127,7 @@ We assign following formulas to the branch server:
 * In the input box, use the branch server [systemitem]``branch1.mystore.com.``
 . In the [guimenu]``Records`` section, subsection [guimenu]``CNAME``, use these parameters to set up CNAME records for Zone 1:
 * In the [guimenu]``Key`` field, enter [systemitem]``salt``, and in the [guimenu]``Value`` field, type the branch server [systemitem]``branch1.mystore.com.``
-* Click [guimenu]``Add Item`` to add another entry.
+* Click btn:[Add item] to add another entry.
 * In the [guimenu]``Key`` field, enter [systemitem]``ftp``, and in the [guimenu]``Value`` field, type the branch server [systemitem]``branch1.mystore.com.``
 . Set up Zone 2 using the same parameters as for Zone 1, but ensure you use the reverse details:
 * The same SOA section as Zone 1.
@@ -142,11 +145,11 @@ Partitioning is specific to the hardware type and configured using [systemitem]`
 .Procedure: Assign Saltboot formula to hardware type group
 
 . Navigate to menu:Systems[System Groups]
-. Select group [systemitem]``HWType:TerminalOEM-T1000`, which is our hardware type group
+. Select group [systemitem]``HWType:TerminalOEM-T1000``, which is our hardware type group
 . Select the [guimenu]``Formulas`` tab once in group details
 . You should see list of formulas in [guimenu]``Configuration`` sub-tab
 . In displayed list select [systemitem]``Saltboot``
-. Save assigned formulas by clicking on [guimenu]``Save`` button in top right corner
+. Save assigned formulas by clicking btn:[Save] in top right corner
 
 .Procedure: Configure Saltboot formula
 
@@ -155,20 +158,20 @@ Partitioning is specific to the hardware type and configured using [systemitem]`
 . Set [systemitem]``Device Type`` to [systemitem]``DISK``
 . Set [systemitem]``Disk Device`` to [systemitem]``*``
 . Set [systemitem]``Partition table type`` to [systemitem]``gpt``
-. Click [systemitem]``+`` to add a partition
+. Click btn:[+] to add a partition
 * Set [systemitem]``Partition Symbolic ID`` to [systemitem]``p1``
 * Set [systemitem]``Partition Size (MiB)`` to [systemitem]``512``
 * Set [systemitem]``Device Mount Point`` to [systemitem]``/boot/efi``
 * Set [systemitem]``Filesystem Format`` to [systemitem]``vfat``
 * Set [systemitem]``Partition Flags`` to [systemitem]``boot``
-. Click [systemitem]``+`` to add a partition
+. Click btn:[+] to add a partition
 * Set [systemitem]``Partition Symbolic ID`` to [systemitem]``p2``
 * Set [systemitem]``Device Mount Point`` to [systemitem]``/``
 * Set [systemitem]``OS Image to Deploy`` to [systemitem]``POS_Image_JeOS7``
 . Save the formula
 
 
-After all procedures are done, apply highstate on the branch server
+After all procedures are done, apply highstate on the branch server.
 
 
 == Synchronize images
