--- a/modules/retail/pages/dedicated-with-scripts.adoc
+++ b/modules/retail/pages/dedicated-with-scripts.adoc
@@ -1,8 +1,11 @@
 [[dedicated-with-scripts]]
 = Set Up the {productname} {smr} Environment with dedicated network for terminal using bundled scripts
 
-To set up the {productname} {smr} environment, you will need to have already installed and configured {productname} Server, have one or more {productname} {smr} branch server proxies installed and one of more OS images built.
+To set up the {productname} {smr} environment, you will need to have already installed and configured:
 
+* {productname} {smr} Server
+* one or more {productname} {smr} branch server proxies
+* one or more POS images built
 
 == Assumptions
 
@@ -86,18 +89,18 @@ After the initial configuration done by command line tools, branch server config
 
 == Setup partitioning
 
-Following guide xref:reference:systems/system-groups.adoc[] create [systemitem]``HWType:TerminalOEM-T1000`` system group.
+Follow xref:reference:systems/system-groups.adoc[] to create [systemitem]``HWType:TerminalOEM-T1000`` system group.
 
 Partitioning is specific to the hardware type and configured using [systemitem]``Saltboot`` formula.
 
 .Procedure: Assign Saltboot formula to hardware type group
 
 . Navigate to menu:Systems[System Groups]
-. Select group [systemitem]``HWType:TerminalOEM-T1000`, which is our hardware type group
+. Select group [systemitem]``HWType:TerminalOEM-T1000``, which is our hardware type group
 . Select the [guimenu]``Formulas`` tab once in group details
 . You should see list of formulas in [guimenu]``Configuration`` sub-tab
 . In displayed list select [systemitem]``Saltboot``
-. Save assigned formulas by clicking on [guimenu]``Save`` button in top right corner
+. Save assigned formulas by clicking btn:[Save] in top right corner
 
 .Procedure: Configure Saltboot formula
 
@@ -106,21 +109,19 @@ Partitioning is specific to the hardware type and configured using [systemitem]`
 . Set [systemitem]``Device Type`` to [systemitem]``DISK``
 . Set [systemitem]``Disk Device`` to [systemitem]``*``
 . Set [systemitem]``Partition table type`` to [systemitem]``gpt``
-. Click [systemitem]``+`` to add a partition
+. Click btn:[+] to add a partition
 * Set [systemitem]``Partition Symbolic ID`` to [systemitem]``p1``
 * Set [systemitem]``Partition Size (MiB)`` to [systemitem]``512``
 * Set [systemitem]``Device Mount Point`` to [systemitem]``/boot/efi``
 * Set [systemitem]``Filesystem Format`` to [systemitem]``vfat``
 * Set [systemitem]``Partition Flags`` to [systemitem]``boot``
-. Click [systemitem]``+`` to add a partition
+. Click btn:[+] to add a partition
 * Set [systemitem]``Partition Symbolic ID`` to [systemitem]``p2``
 * Set [systemitem]``Device Mount Point`` to [systemitem]``/``
 * Set [systemitem]``OS Image to Deploy`` to [systemitem]``POS_Image_JeOS7``
 . Save the formula
 
-
-After all procedures are done, apply highstate on the branch server
-
+After all procedures are done, apply highstate on the branch server.
 
 == Synchronize images
 
