--- a/modules/retail/pages/shared-central-dns.adoc
+++ b/modules/retail/pages/shared-central-dns.adoc
@@ -1,7 +1,11 @@
 [[shared-central-dns]]
 = Set Up the {productname} {smr} Environment with shared network between terminals, branch servers and {productname}
 
-To set up the {productname} {smr} environment, you will need to have already installed and configured {productname} Server, have one or more {productname} {smr} branch server proxies installed and one of more OS images built.
+To set up the {productname} {smr} environment, you will need to have already installed and configured:
+
+* {productname} {smr} Server
+* one or more {productname} {smr} branch server proxies
+* one or more POS images built
 
 == Assumptions
 
@@ -15,11 +19,12 @@ As a terminal we assume to have one terminal with hardware manufacturer [systemi
 
 For POS image we assume to have one with name [systemitem]``POS_Image_JeOS7``.
 
-There is already existing external DHCP and DNS service. DHCP service is correctly configured to PXE boot from branch server.
+There is already existing external DHCP and DNS service.
+DHCP service is correctly configured to PXE boot from branch server.
 
 == Create required system groups
 
-Following guide xref:reference:systems/system-groups.adoc[] we create following system groups:
+Follow guide xref:reference:systems/system-groups.adoc[] to create the system groups:
 
 - [systemitem]``TERMINALS``
 - [systemitem]``HWType:TerminalOEM-T1000``
@@ -45,7 +50,7 @@ We assign following formulas to the branch server:
 . In displayed list select [systemitem]``Branch Network``
 . In displayed list select [systemitem]``Pxe``
 . In displayed list select [systemitem]``Tftpd``
-. Save assigned formulas by clicking on [guimenu]``Save`` button in top right corner
+. Save assigned formulas by clicking btn:[Save] in top right corner
 
 .Procedure: Configure Branch Network formula
 
@@ -58,20 +63,21 @@ We assign following formulas to the branch server:
 .Procedure: Configure Pxe formula
 
 . Select Pxe formula from branch server formula list
-. At the end of [systemitem]``Kernel Command Line Parameters`` append [systemitem]``MASTER=branch1.mystore.com``
+. At the end of [systemitem]``Kernel Command Line Parameters`` append [literal]``MASTER=branch1.mystore.com``
 . Keep the rest with default values
 . Save the formula
 
 .Procedure: Configure Tftpd formula
 
 . Select Tftpd formula from branch server formula list
-. Set [systemitem]``Internal Network Address`` to [systemitem]``0.0.0.0``, this way tftp will be listening on any IPv4
-. Set [systemitem]``TFTP base directory`` to [systemitem]``/srv/saltboot``
+. Set [systemitem]``Internal Network Address`` to [literal]``0.0.0.0``, this way tftp will be listening on any IPv4
+. Set [systemitem]``TFTP base directory`` to [literal]``/srv/saltboot``
 . Save the formula
 
 [NOTE]
 ====
-Next two formulas are group formulas. Make sure you are editing those formulas in their respective groups.
+Next two formulas are group formulas.
+Make sure you are editing those formulas in their respective groups.
 
 Group formulas are visible as assigned also on system level, but editing them will create system specific setting instead of group setting.
 ====
@@ -85,7 +91,7 @@ Assign [systemitem]``Saltboot Group`` formula to the [systemitem]``B0001`` group
 . Select the [guimenu]``Formulas`` tab once in group details
 . You should see list of formulas in [guimenu]``Configuration`` sub-tab
 . In displayed list select [systemitem]``Saltboot Group``
-. Save assigned formulas by clicking on [guimenu]``Save`` button in the top right corner
+. Save assigned formulas by clicking btn:[Save] in the top right corner
 
 .Procedure: Configure Saltboot Group formula
 
@@ -97,11 +103,11 @@ Assign [systemitem]``Saltboot Group`` formula to the [systemitem]``B0001`` group
 .Procedure: Assign Saltboot formula to hardware type group
 
 . Navigate to menu:Systems[System Groups]
-. Select group [systemitem]``HWType:TerminalOEM-T1000`, which is our hardware type group
+. Select group [systemitem]``HWType:TerminalOEM-T1000``, which is our hardware type group
 . Select the [guimenu]``Formulas`` tab once in group details
 . You should see list of formulas in [guimenu]``Configuration`` sub-tab
 . In displayed list select [systemitem]``Saltboot``
-. Save assigned formulas by clicking on [guimenu]``Save`` button in top right corner
+. Save assigned formulas by clicking btn:[Save] in top right corner
 
 .Procedure: Configure Saltboot formula
 
@@ -110,21 +116,19 @@ Assign [systemitem]``Saltboot Group`` formula to the [systemitem]``B0001`` group
 . Set [systemitem]``Device Type`` to [systemitem]``DISK``
 . Set [systemitem]``Disk Device`` to [systemitem]``*``
 . Set [systemitem]``Partition table type`` to [systemitem]``gpt``
-. Click [systemitem]``+`` to add a partition
-. Set [systemitem]``Partition Symbolic ID`` to [systemitem]``p1``
-. Set [systemitem]``Partition Size (MiB)`` to [systemitem]``512``
-. Set [systemitem]``Device Mount Point`` to [systemitem]``/boot/efi``
-. Set [systemitem]``Filesystem Format`` to [systemitem]``vfat``
-. Set [systemitem]``Partition Flags`` to [systemitem]``boot``
-. Click [systemitem]``+`` to add a partition
-. Set [systemitem]``Partition Symbolic ID`` to [systemitem]``p2``
-. Set [systemitem]``Device Mount Point`` to [systemitem]``/``
-. Set [systemitem]``OS Image to Deploy`` to [systemitem]``POS_Image_JeOS7``
+. Click btn:[+] to add a partition
+* Set [systemitem]``Partition Symbolic ID`` to [systemitem]``p1``
+* Set [systemitem]``Partition Size (MiB)`` to [systemitem]``512``
+* Set [systemitem]``Device Mount Point`` to [systemitem]``/boot/efi``
+* Set [systemitem]``Filesystem Format`` to [systemitem]``vfat``
+* Set [systemitem]``Partition Flags`` to [systemitem]``boot``
+. Click btn:[+] to add a partition
+* Set [systemitem]``Partition Symbolic ID`` to [systemitem]``p2``
+* Set [systemitem]``Device Mount Point`` to [systemitem]``/``
+* Set [systemitem]``OS Image to Deploy`` to [systemitem]``POS_Image_JeOS7``
 . Save the formula
 
-
-After all procedures are done, apply highstate on the branch server
-
+After all procedures are done, apply highstate on the branch server.
 
 == Synchronize images
 
