Add some explanations to example nav page

--- a/modules/retail/pages/example-configurations.adoc
+++ b/modules/retail/pages/example-configurations.adoc
@@ -1,8 +1,20 @@
 [[retail-example-configurations]]
+= Example configurations
 
 This section contains some example configurations using various configuration techniques.
 
 * xref:retail:dedicated-with-formulas.adoc[]
++
+Manual configuration of all branch services using formulas with forms to configure Saltboot with dedicated network for POS terminals.
+
 * xref:retail:dedicated-with-scripts.adoc[]
++
+Automatic configuration of all branch services using {productname} {smr} scripts to configure Saltboot with dedicated network for POS terminals.
 * xref:retail:shared-central-dns.adoc[]
+
++
+Configuration of basic branch services using formulas with forms to configure Saltboot in shared network environment.
+
 * xref:retail:containerized-saltboot.adoc[]
++
+Configuration of Saltboot using containerized proxy.
