--- a/modules/retail/pages/containerized-saltboot.adoc
+++ b/modules/retail/pages/containerized-saltboot.adoc
@@ -1,38 +1,48 @@
 [[retail-install-setup-containerized]]
 = Set Up the {productname} {smr} Environment using containerized proxy
 
-To set up the {productname} {smr} environment, you will need to have already installed and configured {productname} {smr} Server 4.3 or newer, have one or more {productname} {smr} containerized proxies, and one or more {productname} build host.
+To set up the {productname} {smr} environment, you will need to have already installed and configured:
 
-This section covers how to configure your {productname} {smr} environment using containerized {productname} Proxy for [systemitem]``saltboot`` deployment.
+* {productname} {smr} Server 4.3 or newer
+* one or more {productname} {smr} containerized proxies
+* one or more {productname} build host
+
+This section covers how to configure your  environment using containerized {productname} Proxy for [systemitem]``Saltboot`` deployment.
 
 [NOTE]
 ====
-Containerized {smr} environment does not use {smr} Branch Servers.
+Containerized {productname} {smr} environment does not use {productname} {smr} Branch Servers.
 ====
 
 [IMPORTANT]
 ====
-Containerized workflow requires rebuild of PXE images using {productname} Server 4.3 or newer. Older images will not work.
+Containerized workflow requires rebuild of PXE images using {productname} Server 4.3 or newer.
+Older images will not work.
 ====
 
 [IMPORTANT]
 ====
-Containerized workflow not longer implicitly configure DHCP for PXE booting. See xref:specialized-guides:salt/salt-formula-dhcpd.adoc[] how to use DHCP formula to configure DHCP server.
+Containerized workflow not longer implicitly configure DHCP for PXE booting.
+See xref:specialized-guides:salt/salt-formula-dhcpd.adoc[] how to use DHCP formula to configure DHCP server.
 
-Without using DHCP formula, make sure your DHCP server has correct PXE booting setting pointing to containerized proxy. See below for example.
+Without using DHCP formula, make sure your DHCP server has correct PXE booting setting pointing to containerized proxy.
+See below for example.
 ====
 
 == Saltboot group
 
-Configuration of containerized {smr} is all concentrated in so call [systemitem]``saltboot groups``. Saltboot groups are regular server groups but with [systemitem]``Saltboot group`` formula enabled for them.
+Containerized {productname} {smr} is configured in [systemitem]``Saltboot Groups``.
+Saltboot Groups are regular server groups with [systemitem]``Saltboot Group`` formula enabled.
+
+Saltboot Groups acts as a branch groups.
 
 image::saltboot_group.png[scaledwidth=80%]
 
-[systemitem]``Saltboot group`` formula is a successor of [systemitem]``Branch Network formula``, [systemitem]``PXE formula`` and [systemitem]``TFTP formula`` used in regular {smr} setups.
+[systemitem]``Saltboot group`` formula is a successor of [systemitem]``Branch Network formula``, [systemitem]``PXE formula`` and [systemitem]``TFTP formula`` used in regular {productname} {smr} setups.
 
-Name of the [systemitem]``Saltboot group`` acts as an identifier for group of machines booted through particular containerized {productname} Proxy.
+Name of the [systemitem]``Saltboot group`` is automatically used as a [systemitem]``branch id``, an identifier for group of machines booted through particular containerized {productname} Proxy.
 
-All [systemitem]``saltboot`` deployed machines though containerized proxy will automatically became members of its [systemitem]``Saltboot group``
+All [systemitem]``saltboot`` deployed machines though containerized proxy will automatically became members of its [systemitem]``Saltboot group``.
 
 To connect [systemitem]``Saltboot group`` with containerized proxy fill [systemitem]``Image Download Server`` entry with Fully Qualified Domain Name ([literal]``FQDN``) of the containerized proxy.
 
@@ -40,18 +50,15 @@ The rest of configuration is optional.
 
 === Default boot image
 
-Configure [systemitem]``Default boot image for new registrations`` to specify what boot image should be booted by default. This is useful when stable boot image is wanted for initial deployments. Without this setting, newest built boot image is used as default boot image so boot image can vary after each new image built.
+Configure [systemitem]``Default boot image for new registrations`` to specify what boot image should be booted by not yet registered POS terminal.
+This is useful when stable boot image is wanted for initial deployments.
+Without this setting, newest built boot image is used as default boot image.
 
-If [systemitem]``Default boot image for new registrations`` is set, option to set its version automatically appear under name [systemitem]``Default boot image version`` where specific image version can be set.
+If [systemitem]``Default boot image for new registrations`` is set, option to set its version appears under name [systemitem]``Default boot image version`` where specific image version can be set.
 
 === Kernel option for the saltboot group
 
-Option [systemitem]``Kernel parameters for the group`` can be used to pass some extra kernel options to default boot image.
-
-[NOTE]
-====
-These parameters are only for default boot image. Once machine is deployed based on its harware type [systemitem]``Saltboot formula`` pillars, kernel options from used [systemitem]``Saltboot formula`` are used overriding those specified in [systemitem]``Saltboot group``.
-====
+Option [systemitem]``Kernel parameters for the group`` can be used to pass extra kernel options to all POS terminals registered withing this saltboot group.
 
 === Naming scheme for new registrations
 
@@ -63,65 +70,45 @@ See xref:retail-terminal-names.adoc[] for explanation of possible configurations
 
 [IMPORTANT]
 ====
-Containerized retail workflow no longer manages DHCP server. External DHCP service must be used.
+Containerized retail workflow no longer manages DHCP server.
+External DHCP service must be used.
 ====
 
 Containerized workflow relies on updated image building in {productname} Server 4.3 where PXE images are no longer collected as bundle, but kernel, initrd and filesystem image are collected individually.
 
 Containerized workflow uses new TFTP container which instead of providing files present on the proxy, routes specific TFTP requests as HTTP requests through proxy local squid proxy to {productname} Server.
 
-Leveraging these two improvements and the fact that containerized proxy is not a salt client, it is no longer possible to call [systemitem]``image-sync`` state.
-After image is build images are immediately available to the saltboot clients. This may have implications on how images are deployed to production.
+Containerized proxy is not a Salt client, it is not possible to call [systemitem]``image-sync`` state.
 
-Following documents differences between containerized and regular workflow. Both are assuming proxy (containerized or in form of {smr} Branch Server) are available.
+Thanks to these improvements and not present Satl client, after image is build it is immediately available to the Saltboot clients.
+This may have implications on how images are deployed to production.
+
+The following sections difference between containerized and regular workflow.
+Both are assuming proxy (containerized or in form of {productname} {smr} Branch Server) are available.
 
 Containerized workflow:
 
+. Build POS image
 . Configure DHCP server for PXE booting for given network
-. Build saltboot image
 . Create [systemitem]``Saltboot group`` and configure it for existing containerized proxy
 . Boot system to be deployed
 
 
 Non-Containerized workflow:
 
-. Configure and apply Retail formulas on {productname} {smr} Proxy
-. Create [systemitem]``server group`` with the name of Branch ID as set in retail formulas
-. Build saltboot image
-. Apply [systemitem]``image-sync`` state on configured {productname} {smr} Proxy
+. Build POS image
+. Configure and apply Retail formulas on {productname} {smr} Branch server
+. Apply [systemitem]``highstate`` state on the Branch server
+. Create [systemitem]``branch group`` with the name of Branch ID as set in retail formulas
+. Apply [systemitem]``image-sync`` state on configured {productname} {smr} Branch server
 . Boot system to be deployed
-
-== Example Configuring DHCP for PXE booting
-
-This example is how to configure ISC DHCPd server to enable PXE, UEFI PXE and UEFI HTTP booting.
-
-Add following to the subnet configuration of your DHCP server:
-
----
-  if substring (option vendor-class-identifier, 0, 10) = "HTTPClient" {
-    option vendor-class-identifier "HTTPClient";
-    filename "<FQDN of containerized proxy>/saltboot/grub.efi";
-  }
-  else {
-    if option arch = 00:07 {
-       filename "grub.efi";
-       next-server <IP address of containerized proxy>;
-    }
-    else {
-      filename "pxelinux.0";
-      next-server <IP address of containerized proxy>;
-    }
-  }
----
-
-Replace all occurences of `<IP address or containerized proxy>` and `<FQDN of containerized proxy>` with its correct values.
 
 == Validating saltboot group configuration
 
-[systemitem]``Saltboot`` utilizes [systemitem]``Cobbler`` system underneath for managing PXE and UEFI configuration.
+[systemitem]``Containerized Saltboot`` utilizes [systemitem]``Cobbler`` system underneath for managing PXE and UEFI configuration.
 
 
-When new PXE image is built (such as {smr} POS_Image_JeOS images) cobbler distro and cobbler profile are automatically generated for this image.
+When new PXE image is built (such as {productname} {smr} POS_Image_JeOS images) [systemitem]``cobbler distro`` and [systemitem]``cobbler profile`` are automatically generated for this image.
 
 For example when first image [literal]``POS_Image_JeOS`` version [literal]``7.0.0`` is build under organization with number 1 cobbler list will show:
 
@@ -135,12 +122,13 @@ profiles:
    1-POS_Image_JeOS7-7.0.0-1
 ----
 
-These entries contains information about kernel and initrd. These entries are however not yet available for PXE booting.
+These entries contain information about kernel and initrd.
+These entries are however not yet available for PXE booting.
 
-Only when [systemitem]``Saltboot group`` is created, new cobbler profile is created for this [systemitem]``Saltboot group`` which points to cobbler distro based on default boot image configuration.
+Only when [systemitem]``Saltboot group`` is created, new cobbler profile is created for this [systemitem]``Saltboot group`` which points to [systemitem]``cobbler distro`` based on default boot image configuration.
 
 
-For example when system group [literal]``MySaltbootGroup`` is created and [systemitem]``Saltboot group formula`` is assigned and configured for this group, new cobbler profile is created.
+For example, when system group [literal]``MySaltbootGroup`` is created and [systemitem]``Saltboot group formula`` is assigned and configured for this group, new cobbler profile is created.
 
 ----
 # cobbler list
@@ -153,7 +141,7 @@ profiles:
    1-MySaltbootGroup
 ----
 
-When inspecting this new group using command `cobbler profile report --name 1-MySaltbootGroup` details of this profile reveal configuration of this saltboot group.
+When inspecting this new group using command [command]``cobbler profile report --name 1-MySaltbootGroup`` details of this profile reveal configuration of this saltboot group.
 
 ----
 # cobbler profile report --name 1-MySaltbootGroup
@@ -166,6 +154,6 @@ Kernel Options                 : {'MASTER': ['downloadserver.example.org'], 'MIN
 
 Kernel options in example are always present and are internal for saltboot functionality.
 
-Using these information cobbler is able to generate required PXE and UEFI Grub configurations which can be checked in files `/srv/tftpboot/pxelinux.cfg/default` and `/srv/tftpboot/grub/x86_64_menu_items.cfg`.
+With this information [systemitem]``Cobbler`` is able to generate required PXE and UEFI Grub configurations which can be checked in [path]``/srv/tftpboot/pxelinux.cfg/default`` and [path]``/srv/tftpboot/grub/x86_64_menu_items.cfg``.
 
 These files contain the end result which will be used by PXE client when determining what to boot and with what parameters.
