Fixe procedure link and some typo

--- a/modules/installation-and-upgrade/pages/server-setup.adoc
+++ b/modules/installation-and-upgrade/pages/server-setup.adoc
@@ -33,7 +33,7 @@ For more information about using multiple servers, see xref:specialized-guides:l
 This section guides you through {productname} setup using {yast}.
 
 
-
+[[proc-quickstart-certificate-information-yast]]
 .Procedure: {productname} Setup
 . On the {productname} Server, at the command line, use the [command]``yast2 susemanager_setup`` command to begin setup.
 . From the introduction screen select menu:SUSE Manager Setup[Setup SUSE Manager from scratch] and click btn:[Next] to continue.
@@ -41,7 +41,6 @@ This section guides you through {productname} setup using {yast}.
     {productname} can sometimes send a large volume of notification emails.
     You can disable email notifications in the {webui} after setup, if you need to.
     For more information on disabling email notifications, see xref:reference:users/user-details.adoc[].
-[[proc-quickstart-certificate-information-yast]]
 . Enter your certificate information and a password.
     If you intend to use a custom SSL certificate, you need to have set this up first.
     For more information about SSL certificates, see xref:administration:ssl-certs.adoc[].
@@ -198,12 +197,12 @@ When using an external database, it has to be configured using the command line 
 ====
 This section guides you through {productname} setup using {mgr-setup}.
 
-.Procedure :
+.Procedure : Configure server using external database
 
 . Create a setup_env.sh file at /root
 
 . In this file describe the server setup
-. First describe your certificate information and a password. The information are the same than <<proc-quickstart-certificate-information-yast>>.
+. First describe your certificate information and a password. The information are the same as <<proc-quickstart-certificate-information-yast>>.
 +
 ----
 CERT_O="SUSE"
@@ -252,7 +251,7 @@ REPORT_DB_PASS="pythia_susemanager"
 
 [WARNING]
 ====
-Don't create RDS with the same user than `MANAGER_USER`
+Don't create RDS with the same user as `MANAGER_USER`
 ====
 
 
