Improve procedure description

--- a/modules/installation-and-upgrade/pages/server-setup.adoc
+++ b/modules/installation-and-upgrade/pages/server-setup.adoc
@@ -202,7 +202,7 @@ This section guides you through {productname} setup using {mgr-setup}.
 . Create a setup_env.sh file at /root
 
 . In this file describe the server setup
-. First describe your certificate information and a password. The information are the same as <<proc-quickstart-certificate-information-yast>>.
+. First describe your certificate information and password. The information are the same as <<proc-quickstart-certificate-information-yast>>.
 +
 ----
 CERT_O="SUSE"
@@ -215,7 +215,7 @@ CERT_PASS="spacewalk"
 USE_EXISTING_CERTS="N"
 ----
 
-. Now describe your database. The user and password will be created during the setup. If you are using an external database, specify the host name and port.
+. Provide a description of your database. The user and password will be created during the setup. If you are using an external database, specify the hostname and port."
 +
 ----
 MANAGER_USER="spacewalk"
@@ -228,7 +228,7 @@ MANAGER_DB_PROTOCOL="TCP"
 MANAGER_ENABLE_TFTP="Y"
 ----
 
-. This part is specific to external database configuration. In this example, RDS database has been deployed and is accessible by the server. To access the database, we also need to use AWS certificate. `EXTERNALDB_ADMIN_USER` and `EXTERNALDB_ADMIN_PASS` are the user and password used during RDS deployment.
+. This section covers the specific configuration for the external database. In this scenario, an RDS database has been deployed and is accessible by the server. To establish a connection, an AWS certificate is also required. EXTERNALDB_ADMIN_USER and EXTERNALDB_ADMIN_PASS are the credentials set during the RDS deployment.
 +
 ----
 EXTERNALDB_ADMIN_USER="postgres"
@@ -238,7 +238,7 @@ REPORT_DB_CA_CERT="/path_to/aws.crt"
 EXTERNALDB_PROVIDER="aws"
 ----
 
-. Your report database also needs to be configured to use the external database. You need to specify again the RDS host name and port.
+. To connect to the external database, configure the report database with the RDS hostname and port. REPORT_DB_USER and REPORT_DB_PASS will be created by the script.
 +
 ----
 REPORT_DB_HOST="db hostname"
@@ -251,13 +251,13 @@ REPORT_DB_PASS="pythia_susemanager"
 
 [WARNING]
 ====
-Don't create RDS with the same user as `MANAGER_USER`
+Do not use MANAGER_USER as the user when deploying RDS.
 ====
 
 
 [TIP]
 .Getting AWS certificate
 ====
-The certificate is available at this address : https://docs.aws.amazon.com/AmazonRDS/latest/UserGuide/UsingWithRDS.SSL.html
+The certificate can be found at this address : https://docs.aws.amazon.com/AmazonRDS/latest/UserGuide/UsingWithRDS.SSL.html
 
 ====
