--- a/modules/client-configuration/pages/clients-sleses.adoc
+++ b/modules/client-configuration/pages/clients-sleses.adoc
@@ -135,17 +135,17 @@ The channels you need for this procedure are:
 
 | {sll} 7
 | rhel-x86_64-server-7
-| -
+| el7-uyuni-client-x86_64
 | res7-suse-manager-tools-x86_64
 
 | {sll} 8
 | rhel8-pool-x86_64
-| -
+| el8-uyuni-client-x86_64
 | res8-manager-tools-pool-x86_64
 
 | {sll} 9
 | el9-pool-x86_64
-| -
+| el9-uyuni-client-x86_64
 | el9-manager-tools-pool-x86_64
 
 |===
