fix typo in shell command (drive-by edit)

--- a/modules/client-configuration/pages/snippets/addchannels_novendor_cli.adoc
+++ b/modules/client-configuration/pages/snippets/addchannels_novendor_cli.adoc
@@ -3,7 +3,7 @@
 +
 ----
 spacewalk-common-channels \
-<base_channel_label>
+<base_channel_label> \
 <child_channel_label_1> \
 <child_channel_label_2> \
 ... <child_channel_label_n>
