Fix default contact method for clients

--- a/modules/client-configuration/pages/tshoot-clients.adoc
+++ b/modules/client-configuration/pages/tshoot-clients.adoc
@@ -392,10 +392,9 @@ spacewalk-services restart
 [NOTE]
 ====
 Increasing this value will cause {productname} Server to take longer to check if a minion is unreachable or unresponsive, causing the {productname} Server to be slower or less responsive overall.
-====[path]``
+====
 
-
-``== Salt 3000 to Salt Bundle Migration
+== Salt 3000 to Salt Bundle Migration
 
 
 === Switch {sles} 12 or {centos} 7 minions (Salt 3000 EOL) to Salt Bundle.
@@ -421,17 +420,7 @@ salt <minion_id> state.apply util.mgr_switch_to_venv_minion pillar='{"mgr_purge_
 
 .Procedure: Enabling the Salt Bundle with Salt SSH support
 
-. Include Salt Bundle in the bootstrap repository for {sles} 12 or {centos} 7 by calling [command]``mgr-create-bootstrap-repo`` explicitly specifying [package]``venv-salt-minion`` as an additional package. 
-+
-----
-mgr-create-bootstrap-repo -c DISTRIBUTION_LABEL venv-salt-minion
-----
 
-+
-[NOTE]
-====
-In order to add the [package]``venv-salt-minion`` package to the bootstrap repository it has to be created first. In case it has not been created, see  xref:client-configuration:bootstrap-repository.adoc#_prepare_to_create_a_bootstrap_repository[Prepare to Create a Bootstrap Repository].
-====
 
 . Specify in [path]``/etc/rhn/rhn.conf``:
 +
