Update CLM sections for RHEL9

--- a/modules/administration/pages/content-lifecycle.adoc
+++ b/modules/administration/pages/content-lifecycle.adoc
@@ -197,6 +197,12 @@ Each individual filter can be edited to select a different module stream, or rem
 Because not all module streams are compatible with each other, changing individual streams may prevent successful resolution of modular dependencies. When this happens, the filters pane in the project details page will show an error describing the problem, and the build button will be disabled until all the module selections are compatible.
 ====
 
+[IMPORTANT]
+====
+Please note that since {rhel}{nbsp}9, modules do not have any defined default streams.
+Therefore, using this template with {rhel}{nbsp}9 sources will have no effect.
+====
+
 For more information on how to set up AppStream repositories with content lifecycle management, see xref:administration:content-lifecycle-examples.adoc#appstream-filters[].
 
 .Procedure: Applying the template
