change uyuni and add suma table

--- a/modules/client-configuration/pages/clients-sleses.adoc
+++ b/modules/client-configuration/pages/clients-sleses.adoc
@@ -119,9 +119,9 @@ include::snippets/addchannels_vendor_webui.adoc[]
 
 endif::[]
 
-
-ifeval::[{uyuni-content} == true]
 The channels you need for this procedure are:
+
+ifeval::[{uyuni-suma} == true]
 
 [[es-channels-cli]]
 [cols="1,1,1,1", options="header"]
@@ -135,18 +135,47 @@ The channels you need for this procedure are:
 
 | {sll} 7
 | rhel-x86_64-server-7
-| el7-uyuni-client-x86_64
+| -
 | res7-suse-manager-tools-x86_64
 
 | {sll} 8
 | rhel8-pool-x86_64
-| el8-uyuni-client-x86_64
+| -
 | res8-manager-tools-pool-x86_64
 
 | {sll} 9
 | el9-pool-x86_64
-| el9-uyuni-client-x86_64
+| -
 | el9-manager-tools-pool-x86_64
+
+|===
+
+ifeval::[{uyuni-content} == true]
+
+[[es-channels-cli]]
+[cols="1,1,1,1", options="header"]
+.ES Channels - CLI
+|===
+
+| OS Version
+| Base Channel
+| Client Channel
+| Tools Channel
+
+| {sll} 7
+| rhel-x86_64-server-7
+| -
+| el7-uyuni-client-x86_64
+
+| {sll} 8
+| rhel8-pool-x86_64
+| -
+| el8-uyuni-client-x86_64
+
+| {sll} 9
+| el9-pool-x86_64
+| -
+| el9-uyuni-client-x86_64
 
 |===
 
