Fix SLE Micro for SUSE Manager and Uyuni

--- a/modules/client-configuration/pages/clients-slemicro.adoc
+++ b/modules/client-configuration/pages/clients-slemicro.adoc
@@ -35,6 +35,7 @@ On the client, before registering it, run as [literal]``root``:
 ----
 transactional-update pkg install salt-transactional-update
 ----
+And then reboot the client.
 ====
 
 
@@ -45,7 +46,6 @@ Before you register {micro} clients to your {productname} Server, you need to ad
 
 include::snippets/arch-other-note.adoc[]
 
-ifeval::[{suma-content} == true]
 The products you need for this procedure are:
 
 [[slemicro-channels-wizard]]
@@ -55,6 +55,15 @@ The products you need for this procedure are:
 
 | OS Version
 | Product Name
+
+| {micro} 5.1 {x86_64}
+| SUSE Linux Enterprise Micro 5.1 x86_64
+
+| {micro} 5.1 {arm64}
+| SUSE Linux Enterprise Micro 5.1 aarch64
+
+| {micro} 5.1 {s390x}
+| SUSE Linux Enterprise Micro 5.1 s390x
 
 | {micro} 5.2 {x86_64}
 | SUSE Linux Enterprise Micro 5.2 x86_64
@@ -92,6 +101,18 @@ The channels you need for this procedure are:
 | Base Channel
 | Updates Channel
 
+| {micro} 5.1 {x86_64}
+| suse-microos-5.1-pool-x86_64
+| suse-microos-5.1-updates-x86_64
+
+| {micro} 5.1 {arm64}
+| suse-microos-5.1-pool-aarch64
+| suse-microos-5.1-updates-aarch64
+
+| {micro} 5.1 {zsystems} ({s390x})
+| suse-microos-5.1-pool-s390x
+| suse-microos-5.1-updates-s390x
+
 | {micro} 5.2 {x86_64}
 | suse-microos-5.2-pool-x86_64
 | suse-microos-5.2-updates-x86_64
@@ -120,10 +141,6 @@ The channels you need for this procedure are:
 
 include::snippets/addchannels_vendor_cli.adoc[]
 
-endif::[]
-
-
-
 ifeval::[{uyuni-content} == true]
 
 To add the client tools, add these channels from the command prompt:
@@ -136,14 +153,14 @@ To add the client tools, add these channels from the command prompt:
 | OS Version
 | Client Channel
 
-| {micro} 5.3
-| sle-micro-5.3-uyuni-client
+| {micro} 5.1
+| suse-microos-5.1-uyuni-client
 
 | {micro} 5.2
 | suse-microos-5.2-uyuni-client
 
-| {micro} 5.1
-| suse-microos-5.1-uyuni-client
+| {micro} 5.3
+| sle-micro-5.3-uyuni-client
 
 |===
 
@@ -182,5 +199,13 @@ Reboot is automatically scheduled after registration is completed, but it is res
 This window may be several hours after the client is registered.
 To speed up {micro} registration, manually reboot the client after the registration script finishes.
 ====
+
+To register your {micro} clients, you need a bootstrap repository.
+By default, bootstrap repositories are automatically created, and regenerated daily for all synchronized products.
+You can manually create the bootstrap repository from the command prompt, using this command:
+
+----
+mgr-create-bootstrap-repo
+----
 
 For more information on registering your clients, see xref:client-configuration:registration-overview.adoc[].
