--- a/modules/client-configuration/pages/clients-sleses.adoc
+++ b/modules/client-configuration/pages/clients-sleses.adoc
@@ -165,7 +165,7 @@ ifeval::[{uyuni-content} == true]
 | {sll} 7
 | rhel-x86_64-server-7
 | -
-| el7-uyuni-client-x86_64
+| sll7-uyuni-client-x86_64
 
 | {sll} 8
 | rhel8-pool-x86_64
