--- a/modules/client-configuration/pages/clients-sleses.adoc
+++ b/modules/client-configuration/pages/clients-sleses.adoc
@@ -170,7 +170,7 @@ ifeval::[{uyuni-content} == true]
 | {sll} 8
 | rhel8-pool-x86_64
 | -
-| el8-uyuni-client-x86_64
+| sll8-uyuni-client-x86_64
 
 | {sll} 9
 | el9-pool-x86_64
