--- a/modules/client-configuration/pages/clients-sleses.adoc
+++ b/modules/client-configuration/pages/clients-sleses.adoc
@@ -121,7 +121,7 @@ endif::[]
 
 The channels you need for this procedure are:
 
-ifeval::[{uyuni-suma} == true]
+ifeval::[{suma-content} == true]
 
 [[es-channels-cli]]
 [cols="1,1,1,1", options="header"]
