--- a/modules/client-configuration/pages/clients-sleses.adoc
+++ b/modules/client-configuration/pages/clients-sleses.adoc
@@ -175,7 +175,7 @@ ifeval::[{uyuni-content} == true]
 | {sll} 9
 | el9-pool-x86_64
 | -
-| el9-uyuni-client-x86_64
+| sll9-uyuni-client-x86_64
 
 |===
 
