--- a/modules/installation-and-upgrade/pages/install-server-unified.adoc
+++ b/modules/installation-and-upgrade/pages/install-server-unified.adoc
@@ -57,6 +57,7 @@ Before installing {susemgr}, ensure your physical or virtual machine has enough 
 . On the [guimenu]``Installation Settings`` screen click btn:[Install].
 
 [NOTE]
+.Testing a title
 ====
 The default {productname} server installation does not enable a
 graphical desktop environment. If you want to run setup tools such as
