--- a/modules/installation-and-upgrade/nav-installation-and-upgrade-guide.adoc
+++ b/modules/installation-and-upgrade/nav-installation-and-upgrade-guide.adoc
@@ -22,59 +22,33 @@ endif::[]
 *** xref:client-requirements.adoc[Client Requirements]
 *** xref:pubcloud-requirements.adoc[Public Cloud Requirements]
 ** xref:install-intro.adoc[Installation]
-
-ifeval::[{suma-content} == true]
-*** xref:install-server-unified.adoc[Install Server]
-*** xref:install-proxy-unified.adoc[Install Proxy]
-endif::[]
-
-ifeval::[{suma-content} == true]
-*** xref:install-vm.adoc[Install Server in a Virtual Machine with Minimal SLES]
-endif::[]
-
-ifeval::[{uyuni-content} == true]
-*** xref:install-uyuni.adoc[Install Uyuni Server with openSUSE]
-*** xref:install-proxy-uyuni.adoc[Install Uyuni Proxy with openSUSE]
-endif::[]
-
-ifeval::[{suma-content} == true]
-*** xref:install-proxy.adoc[Install Proxy from Packages]
-endif::[]
-
-*** xref:proxy-container-installation.adoc[Install Containerized Proxy]
-*** xref:install-pubcloud.adoc[Install on Public Cloud]
-*** xref:proxy-container-k3s-installation.adoc[Install on K3s]
-
-ifeval::[{suma-content} == true]
-*** xref:install-ibmz.adoc[Install on IBM Z]
-endif::[]
-
-** xref:setup-intro.adoc[Setup]
 *** {productname} Server
 
 ifeval::[{suma-content} == true]
-**** xref:server-setup.adoc[Server Setup]
+**** xref:install-server-unified.adoc[Install Server]
+endif::[]
+
+ifeval::[{suma-content} == true]
+**** xref:install-vm.adoc[Install Server in a Virtual Machine with Minimal SLES]
 endif::[]
 
 ifeval::[{uyuni-content} == true]
-**** xref:uyuni-server-setup.adoc[Uyuni Server Setup]
+**** xref:install-uyuni.adoc[Install Uyuni Server with openSUSE]
 endif::[]
 
-**** xref:setup-wizard.adoc[Setup Wizard]
-**** xref:webui-setup.adoc[Web Interface Setup]
-**** xref:pubcloud-setup.adoc[Public Cloud Setup]
-**** xref:connect-payg.adoc[Connect {payg} instance]
+ifeval::[{suma-content} == true]
+**** xref:install-ibmz.adoc[Install on IBM Z]
+endif::[]
 
+**** xref:install-pubcloud.adoc[Install on Public Cloud]
 *** {productname} Proxy
 
 ifeval::[{suma-content} == true]
-**** xref:proxy-registration.adoc[Proxy Registration]
-**** xref:proxy-setup.adoc[Proxy Setup]
+**** xref:install-proxy-unified.adoc[Install Proxy]
 endif::[]
 
 ifeval::[{uyuni-content} == true]
-**** xref:uyuni-proxy-registration.adoc[Uyuni Proxy Registration]
-**** xref:uyuni-proxy-setup.adoc[Uyuni Proxy Setup]
+**** xref:install-proxy-uyuni.adoc[Install Uyuni Proxy with openSUSE]
 endif::[]
 
 ifeval::[{suma-content} == true]
