--- a/modules/installation-and-upgrade/nav-installation-and-upgrade-guide.adoc
+++ b/modules/installation-and-upgrade/nav-installation-and-upgrade-guide.adoc
@@ -6,7 +6,7 @@ include::./branding/pdf/entities.adoc[]
 endif::[]
 
 
-* xref:installation-and-upgrade-overview.adoc[Installation/Upgrade Guide]
+* xref:installation-and-upgrade-overview.adoc[Installation and Upgrade Guide]
 
 ifeval::[{suma-content} == true]
 ** xref:general-requirements.adoc[General Requirements]
