--- a/modules/client-configuration/pages/contact-methods-saltbundle.adoc
+++ b/modules/client-configuration/pages/contact-methods-saltbundle.adoc
@@ -20,7 +20,8 @@ The Salt Bundle is provided as the [package]``venv-salt-minion`` that consists o
 Bootstrapping with {webui} is using Salt Bundle as well, so bootstrapping with {webui} is not Python dependant.
 Using the Salt Bundle, it is no longer needed that the client provides any Python interpreter or modules.
 
-If you bootstrap new clients, registration with the Salt Bundle is the default method. You can switch existing clients to the Salt Bundle method.
+If you bootstrap new clients, registration with the Salt Bundle is the default method.
+You can switch existing clients to the Salt Bundle method.
 If you switch, the [package]``salt-minion`` package and its dependencies will stay installed.
 
 
