Remove Liberty Linux from Uyuni (for now)

--- a/modules/administration/pages/custom-channels.adoc
+++ b/modules/administration/pages/custom-channels.adoc
@@ -69,7 +69,17 @@ Disabling the GPG check is a security risk if packages are from an untrusted sou
 
 [NOTE]
 ====
+
+// SUSE Liberty Linux not available at Uyuni for now
+ifeval::[{suma-content} == true]
 If you are registering traditional {rhel}{nbsp}7 or SLES {es}{nbsp}7 clients you might notice errors with unsigned packages.
+endif::[]
+
+// SUSE Liberty Linux not available at Uyuni for now
+ifeval::[{uyuni-content} == true]
+If you are registering traditional {rhel}{nbsp}7 clients you might notice errors with unsigned packages.
+endif:[]
+
 For more information, see xref:administration:troubleshooting/tshoot-registertradrhel.adoc[].
 ====
 
