--- a/modules/client-configuration/nav-client-configuration-guide.adoc
+++ b/modules/client-configuration/nav-client-configuration-guide.adoc
@@ -12,7 +12,10 @@ endif::[]
 * xref:client-config-overview.adoc[Client Configuration Guide]
 ** xref:supported-features.adoc[Supported Clients and Features]
 *** xref:supported-features-sles.adoc[SLES Supported Features]
+// SUSE Liberty Linux not available at Uyuni for now
+ifeval::[{suma-content} == true]
 *** xref:supported-features-es.adoc[SLES-ES Supported Features]
+endif::[]
 *** xref:supported-features-sle-micro.adoc[SLE Micro Supported Features]
 
 ifeval::[{uyuni-content} == true]
@@ -50,7 +53,10 @@ endif::[]
 *** xref:registration-overview-suse.adoc[SUSE Client Registration]
 **** xref:clients-sle.adoc[SUSE Linux Enterprise Clients]
 **** xref:clients-slemicro.adoc[SLE Micro Clients]
+// SUSE Liberty Linux not available at Uyuni for now
+ifeval::[{suma-content} == true]
 **** xref:clients-sleses.adoc[Expanded Support Clients]
+endif::[]
 *** xref:registration-overview-opensuse.adoc[openSUSE Client Registration]
 **** xref:clients-opensuseleap.adoc[openSUSE Leap Clients]
 
