--- a/modules/client-configuration/pages/clients-centos.adoc
+++ b/modules/client-configuration/pages/clients-centos.adoc
@@ -8,7 +8,12 @@ Traditional clients are not available on {centos}{nbsp}8.
 
 [IMPORTANT]
 ====
+
+// SUSE Liberty Linux not available at Uyuni for now
+ifeval::[{suma-content} == true]
 {centos} clients are based on {centos} and are unrelated to {sleses}, RES, {redhat}, or {es}.
+endif::[]
+
 You are responsible for arranging access to {centos} base media repositories and {centos} installation media, as well as connecting {productname} Server to the {centos} content delivery network.
 ====
 
