--- a/modules/client-configuration/pages/clients-rh-cdn.adoc
+++ b/modules/client-configuration/pages/clients-rh-cdn.adoc
@@ -1,7 +1,11 @@
 [[clients-rh-cdn]]
 = Registering {rhel} Clients with CDN
 
+// SUSE Liberty Linux not available at Uyuni for now
+ifeval::[{suma-content} == true]
 If you are running {rhel} clients directly, rather than using {sleses}, you need to use Red Hat sources to retrieve and update packages.
+endif::[]
+
 This section contains information about using the {redhat} content delivery network (CDN) to register traditional and Salt clients running {rhel} operating systems.
 
 Traditional clients are available on {rhel}{nbsp}7 only.
@@ -11,7 +15,12 @@ For information about using {redhat} update infrastructure (RHUI) instead, see x
 
 [IMPORTANT]
 ====
+
+// SUSE Liberty Linux not available at Uyuni for now
+ifeval::[{suma-content} == true]
 {rhel} clients are based on {redhat} and are unrelated to {sleses}, RES, or {sles}.
+endif::[]
+
 You are responsible for arranging access to {redhat} base media repositories and {rhela} installation media, as well as connecting {productname} Server to the {redhat} content delivery network.
 You must obtain support from {redhat} for all your {rhela} systems.
 If you do not do this, you might be violating your terms with {redhat}.
@@ -154,8 +163,16 @@ The products you need for this procedure are:
 
 | OS Version | Product Name
 | {redhat} 7 | RHEL7 Base x86_64
+// SUSE Liberty Linux not available at Uyuni for now
+ifeval::[{suma-content} == true]
 | {redhat} 8 | RHEL or SLES ES or CentOS 8 Base
 | {redhat} 9 | RHEL and Liberty 9 Base
+endif::[]
+// SUSE Liberty Linux not available at Uyuni for now
+ifeval::[{uyuni-content} == true]
+| {redhat} 8 | RHEL or CentOS 8 Base
+| {redhat} 9 | RHEL
+endif::[]
 |===
 
 //[NOTE]
@@ -310,8 +327,16 @@ The channels you need for this procedure are:
 
 | OS Version | Base Product          | Base Channel
 | {redhat} 7 | RHEL7 Base x86_64 | rhel7-pool-x86_64
+// SUSE Liberty Linux not available at Uyuni for now
+ifeval::[{suma-content} == true]
 | {redhat} 8 | RHEL or SLES ES or CentOS 8 Base | rhel8-pool-x86_64
 | {redhat} 9 | RHEL and Liberty 9 Base | el9-pool-x86_64
+endif::[]
+// SUSE Liberty Linux not available at Uyuni for now
+ifeval::[{suma-content} == true]
+| {redhat} 8 | RHEL or CentOS 8 Base | rhel8-pool-x86_64
+| {redhat} 9 | RHEL | el9-pool-x86_64
+endif::[]
 |===
 
 //[NOTE]
