--- a/modules/client-configuration/pages/registration-overview-suse.adoc
+++ b/modules/client-configuration/pages/registration-overview-suse.adoc
@@ -1,7 +1,16 @@
 [[suse-registration-overview]]
 = SUSE Client Registration
 
+// SUSE Liberty Linux not available at Uyuni for now
+ifeval::[{suma-content} == true]
 You can register {sle} and {sleses} clients to your {productname} Server.
+endif::[]
+
+// SUSE Liberty Linux not available at Uyuni for now
+ifeval::[{uyuni-content} == true]
+You can register {sle} clients to your {productname} Server.
+endif::[]
+
 The method and details varies depending on the operating system of the client.
 
 Before you start, ensure that the client has the date and time synchronized correctly with the {productname} Server.
