--- a/modules/client-configuration/pages/repositories.adoc
+++ b/modules/client-configuration/pages/repositories.adoc
@@ -54,7 +54,10 @@ After a client has completed onboarding, you can add local repositories to these
 | Client Operating System | Local Repository Directory
 | {sles} | [path]``/etc/zypp/repos.d``
 | {opensuse} | [path]``/etc/zypp/repos.d``
+// SUSE Liberty Linux not available at Uyuni for now
+ifeval::[{suma-content} == true]
 | {sles} {es} | [path]``/etc/yum.repos.d/``
+endif::[]
 | {rhel} | [path]``/etc/yum.repos.d/``
 | {centos} | [path]``/etc/yum.repos.d/``
 | {ubuntu} | [path]``/etc/apt/sources.list.d/``
