--- a/modules/client-configuration/pages/supported-features.adoc
+++ b/modules/client-configuration/pages/supported-features.adoc
@@ -224,20 +224,23 @@ ifeval::[{uyuni-content} == true]
 | {check}
 | {check}
 
-| {sll} 9
-| {x86_64}
-| {cross}
-| {check}
+// SUSE Liberty Linux not available at Uyuni for now
+//| {sll} 9
+//| {x86_64}
+//| {cross}
+//| {check}
 
-| {sles} ES 8
-| {x86_64}
-| {cross}
-| {check}
+// SUSE Liberty Linux not available at Uyuni for now
+//| {sles} ES 8
+//| {x86_64}
+//| {cross}
+//| {check}
 
-| {sles} ES 7
-| {x86_64}
-| {check}
-| {check}
+// SUSE Liberty Linux not available at Uyuni for now
+//| {sles} ES 7
+//| {x86_64}
+//| {check}
+//| {check}
 
 | {alibabaclo} 2
 | {x86_64}, {aarch64}
