--- a/modules/administration/pages/troubleshooting/tshoot-registertradrhel.adoc
+++ b/modules/administration/pages/troubleshooting/tshoot-registertradrhel.adoc
@@ -27,9 +27,20 @@ Fix: Edit the /etc/yum/pluginconf.d/rhnplugin.conf file to disable the GPG check
 Result: Unsigned packages can be installed as required, and the clients will work as expected.
 ////
 
+// SUSE Liberty Linux not available at Uyuni for now
+ifeval::[{suma-content} == true]
 Traditional {rhel}{nbsp}7 and SLES {es}{nbsp}7 clients require some unsigned packages to work properly with {productname}, so custom channels for these client types usually unset the ``gpgcheck`` flag.
 However, the ``rhnplugin.conf`` file overrides this setting, and enables the GPG check.
 
 This means that when traditional {rhel}{nbsp}7 and SLES {es}{nbsp}7 clients are registered, the client will not install unsigned packages from the custom channel, even if the ``gpgcheck`` is disabled in the custom channel.
+endif::[]
+
+// SUSE Liberty Linux not available at Uyuni for now
+ifeval::[{uyuni-content} == true]
+Traditional {rhel}{nbsp}7 clients require some unsigned packages to work properly with {productname}, so custom channels for these client types usually unset the ``gpgcheck`` flag.
+However, the ``rhnplugin.conf`` file overrides this setting, and enables the GPG check.
+
+This means that when traditional {rhel}{nbsp}7 clients are registered, the client will not install unsigned packages from the custom channel, even if the ``gpgcheck`` is disabled in the custom channel.
+endif::[]
 
 To resolve the problem, edit the ``/etc/yum/pluginconf.d/rhnplugin.conf`` file and disable the GPG check to enable installation of unsigned packages, and allow the clients to work as expected.
