--- a/modules/client-configuration/pages/supported-features-rh.adoc
+++ b/modules/client-configuration/pages/supported-features-rh.adoc
@@ -1,8 +1,15 @@
 [[supported-features-rh]]
 = Supported {rhel} Features
 
-
+// SUSE Liberty Linux not available at Uyuni for now
+ifeval::[{suma-content} == true]
 This table lists the availability of various features on native {rhel} clients (without Expanded Support).
+endif::[]
+
+// SUSE Liberty Linux not available at Uyuni for now
+ifeval::[{uyuni-content} == true]
+This table lists the availability of various features on native {rhel} clients.
+endif::[]
 
 
 [IMPORTANT]
