fixup! Update CLM sections for RHEL9

--- a/modules/administration/pages/content-lifecycle-examples.adoc
+++ b/modules/administration/pages/content-lifecycle-examples.adoc
@@ -290,7 +290,7 @@ invalid.
 ====
 
 .Procedure: Disabling Modularity
-. In the {productname} {webui}, navigate to your {rhel}{nbsp}8 CLM project.
+. In the {productname} {webui}, navigate to your {rhel}{nbsp}9 CLM project.
     Ensure that you have included the AppStream channels for your project.
 . Click btn:``Create Filter`` and use these parameters:
 +
@@ -304,6 +304,11 @@ invalid.
 This will effectively remove the module metadata from the target repository, excluding any package that belongs to a module.
 
 When you build your CLM project using the btn:[Build] button in the {webui}, the target repository is a regular repository without any modules, that contains packages from the selected module streams.
+
+[NOTE]
+====
+Disabling modularity altogether in {rhel}{nbsp}8 projects might result in a faulty environment as some modules are essential for healthy operation in {rhel}{nbsp}8.
+====
 
 // This feature is mandatory to make RHEL/CentOS 8 modular repositories work
 // in the SUMA UI. Otherwise, even though modular repositories can be synced
