Add IMPORTANT note to remark Salt Bundle as the new default

--- a/modules/client-configuration/pages/contact-methods-saltbundle.adoc
+++ b/modules/client-configuration/pages/contact-methods-saltbundle.adoc
@@ -12,6 +12,10 @@ The Salt Bundle can be installed on clients that do not meet the requirements fo
 
 It is also possible to use the Salt Bundle on systems that run a Salt Minion connected to a Salt Master other than the {productname} Salt Master.
 
+[IMPORTANT]
+====
+Salt Bundle has become the default contact method for new clients in SUSE Manager 4.2.
+====
 
 == Client Registration with Salt Bundle as a Minion
 
