--- a/modules/installation-and-upgrade/pages/server-setup.adoc
+++ b/modules/installation-and-upgrade/pages/server-setup.adoc
@@ -228,7 +228,10 @@ MANAGER_DB_PROTOCOL="TCP"
 MANAGER_ENABLE_TFTP="Y"
 ----
 
-. This section covers the specific configuration for the external database. In this scenario, an RDS database has been deployed and is accessible by the server. To establish a connection, an AWS certificate is also required. EXTERNALDB_ADMIN_USER and EXTERNALDB_ADMIN_PASS are the credentials set during the RDS deployment.
+. Define the specific configuration for the external database.
+  In this scenario, an RDS database has been deployed and is accessible by the server.
+  To establish a connection, an AWS certificate is also required.
+  [literal]``EXTERNALDB_ADMIN_USER`` and [literal]``EXTERNALDB_ADMIN_PASS`` are the credentials set during the RDS deployment:
 +
 ----
 EXTERNALDB_ADMIN_USER="postgres"
