Update comments from review

--- a/modules/installation-and-upgrade/pages/server-setup.adoc
+++ b/modules/installation-and-upgrade/pages/server-setup.adoc
@@ -7,7 +7,7 @@ This section covers {productname} Server setup, using these procedures:
 * Create the main administration account with the {productname} {webui}
 * Name your base organization and add login credentials
 * Synchronize the {sle} product channel from {scc}
-* Set up {productname} using external database
+* Set up {productname} with external database
 
 [WARNING]
 ====
@@ -184,25 +184,26 @@ tail -f /var/log/rhn/reposync/<CHANNEL_NAME>.log
 When the channel synchronization process is complete, you can continue with client registration.
 For more instructions, see xref:client-configuration:registration-overview.adoc[].
 
-== Set up {productname} using external database
+== Set up {productname} with external database
 
-In this example we are going to use RDS product from Amazon Web Service
+In this example, we use RDS product from Amazon Web Service.
 
 [WARNING]
 ====
 Currently, configuring an external database is not supported by yast2 setup.
 
-When using an external database, it has to be configured using the command line mgr-setup.
+You can configure an external database using the [command]``mgr-setup`` command line tool.
 
 ====
-This section guides you through {productname} setup using {mgr-setup}.
+This section guides you through {productname} setup using [command]``mgr-setup``.
 
-.Procedure : Configure server using external database
+.Procedure : Configuring server with external database
 
-. Create a setup_env.sh file at /root
+First create a [path]``setup_env.sh`` file in the [path]``/root`` directory defining the server setup like this:
 
-. In this file describe the server setup
-. First describe your certificate information and password. The information are the same as <<proc-quickstart-certificate-information-yast>>.
+
+. Here you define your certificate information and password.
+The information are the same as <<proc-quickstart-certificate-information-yast>>.
 +
 ----
 CERT_O="SUSE"
@@ -215,7 +216,9 @@ CERT_PASS="spacewalk"
 USE_EXISTING_CERTS="N"
 ----
 
-. Provide a description of your database. The user and password will be created during the setup. If you are using an external database, specify the hostname and port."
+. Define your database.
+The user and password will be created during the setup.
+If you are using an external database, specify the hostname and port.
 +
 ----
 MANAGER_USER="spacewalk"
@@ -241,7 +244,8 @@ REPORT_DB_CA_CERT="/path_to/aws.crt"
 EXTERNALDB_PROVIDER="aws"
 ----
 
-. To connect to the external database, configure the report database with the RDS hostname and port. REPORT_DB_USER and REPORT_DB_PASS will be created by the script.
+. To connect to the external database, configure the report database with the RDS hostname and port.
+[literal]``REPORT_DB_USER`` and [literal]``REPORT_DB_PASS`` will be created by the script:
 +
 ----
 REPORT_DB_HOST="db hostname"
@@ -254,13 +258,13 @@ REPORT_DB_PASS="pythia_susemanager"
 
 [WARNING]
 ====
-Do not use MANAGER_USER as the user when deploying RDS.
+Do not use [literal]``MANAGER_USER`` as the user when deploying RDS.
 ====
 
 
-[TIP]
+[NOTE]
 .Getting AWS certificate
 ====
-The certificate can be found at this address : https://docs.aws.amazon.com/AmazonRDS/latest/UserGuide/UsingWithRDS.SSL.html
+The certificate can be found at https://docs.aws.amazon.com/AmazonRDS/latest/UserGuide/UsingWithRDS.SSL.html.
 
 ====
