--- a/modules/administration/pages/content-lifecycle.adoc
+++ b/modules/administration/pages/content-lifecycle.adoc
@@ -199,7 +199,7 @@ Because not all module streams are compatible with each other, changing individu
 
 [IMPORTANT]
 ====
-Please note that since {rhel}{nbsp}9, modules do not have any defined default streams.
+Since {rhel}{nbsp}9, modules do not have any defined default streams.
 Therefore, using this template with {rhel}{nbsp}9 sources will have no effect.
 ====
 
