Fix default contact method for clients (#2005)
* Fix default contact method for clients
* Update modules/client-configuration/pages/contact-methods-saltbundle.adoc
Co-authored-by: Karl Eichwalder <ke@suse.de>

--- a/modules/client-configuration/pages/contact-methods-saltbundle.adoc
+++ b/modules/client-configuration/pages/contact-methods-saltbundle.adoc
@@ -14,11 +14,8 @@ It is also possible to use the Salt Bundle on systems that run a Salt Minion con
 
 [IMPORTANT]
 ====
-The Salt Bundle is disabled by-default in {productname} 4.2, but it's default in {productname} 4.3.
-To get the detailed information about the Salt Bundle check {productname} 4.3 documentation.
+Salt Bundle has become the default contact method for new clients in SUSE Manager 4.2.
 ====
-
-
 
 == Client Registration with Salt Bundle as a Minion
 
@@ -27,10 +24,7 @@ The Salt Bundle is provided as the [package]``venv-salt-minion`` that consists o
 Bootstrapping with {webui} is using Salt Bundle as well, so bootstrapping with {webui} is not Python dependant.
 Using the Salt Bundle, it is no longer needed that the client provides any Python interpreter or modules.
 
-Before bootstrapping new client you need to include [package]``venv-salt-minion`` to the bootstrap repository relevant to the client with explicitly specifying [package]``venv-salt-minion`` as an additional package on calling [command]``mgr-create-bootstrap-repo``.
-----
-mgr-create-bootstrap-repo -c DISTRIBUTION_LABEL venv-salt-minion
-----
+If you bootstrap new clients, registration with the Salt Bundle is the default method.
 You can switch existing clients to the Salt Bundle method.
 If you switch, the [package]``salt-minion`` package and its dependencies will stay installed.
 
